/*
 * $Id: ChangeLog,v 1.881 2012-03-15 18:49:06 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-03-15 15:49:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     ! Fixed: width of first column is wrongly computed when Grid
       has checkboxes.

2012-03-15 13:50:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     ! Fixed initial validation of items array.

2012-03-14 23:35:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_controlmisc.prg
     ! Fixed: GetProperty for Header method in TGrid class wasn't working.

2012-03-14 22:45:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./compile_mingw.bat
     ! Fixed compilation with /D swith (debug mode).

2012-03-14 12:35:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     * Parameter lNoHeaders renamed to lHasHeaders.

2012-03-13 12:50:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_listbox.prg
     ! Fixed: Double click event doesn't allow changing the focus
       to a different window.
     + Added: Events method to trap WM_LBUTTONDBLCLK message.
     + Added code in Events_Command method to fire OnDlbClick event
       when LBN_DBLCLK notification code is received.

2012-03-12 20:15:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_tree.prg
     * Now 0 is a valid ID. Note: "" (empty string) is NOT valid.
     * Method GetParent returns NIL instead of 0 for root items.
     ! Fixed: Method GetParent cancels when item has no parent in a
       Tree with ITEMID clause.
     ! Fixed: Method MoveItem doesn't update the images of the parent
       of the "From" item when parent ends with no children.
     ! Fixed: Method Value cancels when Tree has no items or no item